[package]
name = "uncaptcha"
version = "0.1.0"
edition = "2024"
description = "Official uncaptcha.io wrapper made in Rust"
repository = "https://github.com/uncaptchaio/uncaptcha-sdk-rust"

[dependencies]
bon = "3.9.1"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["full"] }
